# pdfanl

./: .gitignore  README.md  pdfanl.py  pyproject.toml  requirements-dev.txt  requirements.txt
pdfanl/: __init__.py  analyzer.py  cli.py  config.py  output.py  utils.py  vt_client.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_config.py  test_utils.py  test_vt_client.py
